# design-office

./: .env.example  .gitignore  BLOCKERS.md  BUILD_LOG.md  CLAUDE.md  LICENSE  README.md
backend/: pyproject.toml
backend/app/: __init__.py  chat.py  claude_client.py  config.py  main.py  models.py  schemas.py
backend/app/agents/: orchestrator.py  zone_envelope_validator.py  zone_overlap_validator.py
backend/app/mcp/: autocad_client.py  sketchup_client.py
backend/app/pdf/: fixtures.py  parser.py
backend/app/services/: __init__.py  nanobanana_client.py
backend/app/surfaces/: brief.py  export.py  floorplan_svg.py  justify.py  justify_html_pdf.py  (+5 more)
backend/scripts/: capture_variant_angles.py  iter27_live_batiment_a.py  iter27_live_batiment_a_sketchup.py  iter27_p1_smoke.py  iter28_phase_a_capture.py  iter28_phase_c_live.py  iter28_setup_domaine_du_park.py  iter29_debug_scene.py  iter29_furniture_smoke.py  iter29_reversibility_test.py  run_lumen_export.py  run_lumen_full.py  run_lumen_justify.py  run_lumen_pptx.py  run_lumen_sketchup.py  sketchup_smoke_cube.py  sketchup_smoke_designoffice.py
backend/tests/: test_adjacency.py  test_adjacency_live_fixture.py  test_autocad_client.py  test_brief_manifest.py  test_chat.py  test_export.py  test_floorplan_svg.py  test_health.py  test_iterate.py  test_justify.py  test_justify_html_pdf.py  test_justify_pptx.py  test_micro_zoning_live_fixture.py  test_micro_zoning_structured.py  test_moodboard.py  test_nanobanana.py  test_parser_rooms.py  test_testfit.py  test_zone_envelope_validator.py  test_zone_overlap_validator.py
(+162 files in other folders)
