[project]
name = "design-office-backend"
version = "0.1.0"
description = "Design Office backend — FastAPI + Opus 4.7 orchestrator for the Anthropic hackathon"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Saad Zwaki", email = "saadzwaki@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "ezdxf>=1.3",
    "pillow>=10.3",
    "reportlab>=4.2",
    "python-multipart>=0.0.9",
    "python-pptx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
